apps/finpay-api/overlays/dev/ingress.yaml
################################################################################
# apps/finpay-api/overlays/dev/ingress.yaml
################################################################################
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: finpay-api
  namespace: finpay-dev
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  rules:
    - host: api.dev.finpay.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: finpay-api
                port:
                  name: http
